@@ -180,7 +180,8 @@ clients.  Note that you must recreate (not update) your database for changes to
 this parameter to take effect.  Possible values are artist, album, title,
 track, name, genre, date, composer, performer, comment, disc,
 musicbrainz_artistid, musicbrainz_albumid, musicbrainz_albumartistid,
-musicbrainz_trackid.  Multiple tags may be specified as a comma separated list.
+musicbrainz_releasetrackid, musicbrainz_trackid.  Multiple tags may be specified
+as a comma separated list.
 An example value is "artist,album,title,track".  The special value "none" may
 be used alone to disable all metadata.  The default is to use all known tag
 types except for comments and those starting with "musicbrainz".
