@@ -166,6 +166,10 @@ static constexpr struct {
 	{ TAG_MUSICBRAINZ_ALBUMARTISTID,
 	  MPD_TAG_MUSICBRAINZ_ALBUMARTISTID },
 	{ TAG_MUSICBRAINZ_TRACKID, MPD_TAG_MUSICBRAINZ_TRACKID },
+#if LIBMPDCLIENT_CHECK_VERSION(2,10,0)
+	{ TAG_MUSICBRAINZ_RELEASETRACKID,
+	  MPD_TAG_MUSICBRAINZ_RELEASETRACKID },
+#endif
 	{ TAG_NUM_OF_ITEM_TYPES, MPD_TAG_COUNT }
 };
 
