@@ -349,6 +349,9 @@ roar_tag_convert(TagType type, bool *is_uuid)
 		case TAG_MUSICBRAINZ_TRACKID:
 			*is_uuid = true;
 			return "HASH";
+		case TAG_MUSICBRAINZ_RELEASETRACKID:
+			*is_uuid = true;
+			return "HASH";
 
 		default:
 			return nullptr;
