@@ -54,6 +54,7 @@ enum TagType
 	TAG_MUSICBRAINZ_ALBUMID,
 	TAG_MUSICBRAINZ_ALBUMARTISTID,
 	TAG_MUSICBRAINZ_TRACKID,
+	TAG_MUSICBRAINZ_RELEASETRACKID,
 
 	TAG_NUM_OF_ITEM_TYPES
 };
