@@ -67,6 +67,7 @@ ver 0.19 (not yet released)
 * configuration
   - allow playlist directory without music directory
   - use XDG to auto-detect "music_directory" and "db_file"
+* add tag "MUSICBRAINZ_RELEASETRACKID"
 * new resampler option using libsoxr
 * ARM NEON optimizations
 * install systemd unit for socket activation
